--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <div id="app" class="container">
-    <div class="entity entity--pac pacboy-active-light"></div>
+    <div class="entity entity--pac pacboy-active-light" id='pacman'></div>
   </div>
-  <script src="/js/entity.js"></script>
-  <script src="/js/stage.js"></script>
-  <script src="/js/pacman.js"></script>
+  <!-- {% comment %} <script src="/js/entity.js"></script> {% endcomment %} -->
+  <!-- {% comment %} <script src="/js/stage.js"></script> {% endcomment %} -->
+  <!-- {% comment %} <script src="/js/pacman.js"></script> {% endcomment %} -->
   <script src="/js/index.js"></script>
 </body>
 </html>
