--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 <body>
   <div id="app" class="container">
     <div class="entity entity--pac pacboy-active-light" id='pacman'></div>
+    <img class="apple" src="/img/apple.png"> 
   </div>
   <!-- {% comment %} <script src="/js/entity.js"></script> {% endcomment %} -->
   <!-- {% comment %} <script src="/js/stage.js"></script> {% endcomment %} -->
